packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/22_clf_file_as_idt.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>CLF File as Input Transform</aces:description>
        <aces:author>
            <aces:name>Camera Dept</aces:name>
            <aces:emailAddress>camera@production.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:a1a5a229-15a1-46f5-9455-f081dff7c3dd</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Custom Camera IDT via CLF</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:03a0e563-5c6d-450b-91fe-81fc13a4ac37</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>Custom Blackmagic Pocket 6K Film IDT</aces:description>
            <aces:hash algorithm="http://www.w3.org/2001/04/xmldsig-more#md5">xS7xh6SFocLPL6gkvoJjBw==</aces:hash>
            <aces:file>idt.Blackmagic.Pocket_6K_Film_v4.clf</aces:file>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>ACES Gamut Compress</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:LMT.Academy.GamutCompress.a1.3.0</aces:transformId>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Primary Grade</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.02 0.98 0.99</cdl:Slope>
                <cdl:Offset>-0.04 -0.04 -0.04</cdl:Offset>
                <cdl:Power>1.04 0.99 0.97</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.09</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>ACES to Rec.709</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
